load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "//bazel:api.bzl",
    "mojo_binary",
    "mojo_test",
    "pkg_filegroup",
    "pkg_files",
    "strip_prefix",
)

package(default_visibility = ["//max:consumers"])

_RUN_BENCHMARKS = [
    "algorithm/parallelize_overhead.mojo",
    "nn/bench_gather_reduce.mojo",
]

_EXTRA_CONSTRAINTS = {
    "algorithm/parallelize_overhead.mojo": select({
        "//:asan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    "gpu/comm/bench_allgather.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_allreduce.mojo": ["//:nvidia_gpu"],  # FIXME: KERN-1377
    "gpu/comm/bench_allreduce_residual_rmsnorm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_lamport_allreduce_rmsnorm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist; needs P2P
    "gpu/comm/bench_broadcast.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_reducescatter.mojo": ["//:nvidia_gpu"],  # Requires P2P for reduce-scatter
    "gpu/comm/bench_ep_dispatch.mojo": ["//:nvidia_gpu"],  # Requires NVSHMEM shmem_module_init
    "gpu/comm/bench_ep_combine.mojo": ["//:nvidia_gpu"],  # Requires NVSHMEM shmem_module_init
    "nn/bench_gather_reduce.mojo": ["@platforms//:incompatible"],  # TODO(KERN-464): re-enable and remove this tag
    "gpu/nn/bench_kv_cache_ragged_qkv_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: PRDT-506
    "gpu/nn/bench_fused_qkv_index_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: PRDT-506 (paged KV + matmul, same as sibling)
    "gpu/linalg/bench_apple_gpu_matmul.mojo": ["//:apple_gpu"],  # Apple M5 simdgroup matmul (incl. split-K) — Metal only
    "gpu/linalg/bench_apple_fp4_matmul.mojo": ["//:apple_gpu"],  # Apple M5 weight-only NVFP4 (W4A16) matmul — Metal only
    "gpu/linalg/bench_apple_fp4_reconcile.mojo": ["//:apple_gpu"],  # Apple M5 W4A16 dispatch-path benchmark — Metal only
    "gpu/linalg/bench_apple_int8_matmul.mojo": ["//:apple_gpu"],  # Apple M5 int8 W8A8 GEMM+dequant + activation-quant — Metal only
    "gpu/linalg/bench_apple_fp8_gemv.mojo": ["//:apple_gpu"],  # Apple M5 FP8 W8A16 GEMV + tiled matmul — Metal only
    "gpu/linalg/bench_grouped_matmul_apple_fp8.mojo": ["//:apple_gpu"],  # Apple M5 grouped (MoE) FP8 W8A16 tiled vs naive — Metal only
    "gpu/nn/bench_conv2d_apple.mojo": ["//:apple_gpu"],  # Apple M5 im2col conv2d vs naive — Metal only
    "gpu/nn/bench_apple_fa_prefill.mojo": ["//:apple_gpu"],  # Apple M5 MMA flash-attention prefill (no-SMEM + SMEM-staged) — Metal only
    "gpu/linalg/bench_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: PRDT-506
    "gpu/bench_matmul_mxfp4.mojo": ["//:amd_gpu"],
    "gpu/linalg/bench_grouped_matmul_dequant_mxfp4_amd.mojo": ["//:amd_gpu"],
    "gpu/linalg/bench_grouped_matmul_amd.mojo": ["//:amd_gpu"],
    "gpu/bench_topk.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MSTDL-1880
    "gpu/nn/bench_mla.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: KERN-2317
    "gpu/linalg/bench_grouped_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/linalg/bench_blockwise_fp8_1d2d.mojo": ["//:b200_gpu"],  # SM100-specific blockwise FP8
    "gpu/linalg/bench_mma_throughput_sm100.mojo": ["//:b200_gpu"],  # SM100 tcgen05 MMA tile-size microbench
    "gpu/linalg/profile_grouped_matmul_swiglu_nvfp4.mojo": ["//:b200_gpu"],  # SM100-specific grouped block-scaled matmul
    "gpu/linalg/bench_bmm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/nn/bench_mha.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/nn/bench_fp8_index.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses NVIDIA SM90 TMA primitives; Metal AIR codegen crashes.
    "gpu/nn/bench_topk_bitonic.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Uses NVIDIA GPU barrier primitives.
    "gpu/nn/bench_conv2d_sm100.mojo": ["//:b200_gpu"],  # SM100-specific TMA im2col
    "gpu/nn/bench_mha_prefill_v2.mojo": ["//:mi355_gpu"],  # gfx950 MFMA 32x32x16 BF16 + from_expcnt
    "gpu/nn/bench_mha_prefill_v2_paged.mojo": ["//:mi355_gpu"],  # gfx950 MFMA 32x32x16 BF16 + paged KV operand
    "gpu/linalg/bench_block_scaled_matmul.mojo": ["//:b200_gpu"],  # SM100-specific block-scaled matmul
    "gpu/linalg/bench_matmul_tma_epilogue.mojo": ["//:b200_gpu"],  # SM100-specific TMA epilogue matmul
    "gpu/linalg/bench_matmul_1d_tma_epilogue.mojo": ["//:b200_gpu"],  # SM100-specific 1D bias TMA epilogue matmul
    "gpu/nn/bench_moe_routing.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Requires NVIDIA GPU warp primitives
    "gpu/bench_cp_async_bulk.mojo": ["//:b200_gpu"],  # cp.async.bulk requires SM100+ architecture
    "gpu/comm/bench_scatter.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: GEN-535
    "gpu/nn/bench_argsort.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: GEN-535
    "gpu/nn/profile_gemv_partial_norm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses device-scope atomics (_DEVICE_SCOPE) unsupported on Metal.
    "gpu/nn/trace_gemv_partial_norm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses device-scope atomics (_DEVICE_SCOPE) unsupported on Metal.
}

_CPU_TESTS = glob(
    ["**/*.mojo"],
    exclude = [
        "**/*.yaml",
        "autotune/**",
        "demos/**",
        "gpu/**",
        "misc/**",
        "packages/**",
    ] + _RUN_BENCHMARKS,
)

[
    mojo_binary(
        name = src.split(".")[0],
        srcs = [src],
        enable_assertions = False,
        target_compatible_with = _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "@mojo//:std",
        ],
    )
    for src in _CPU_TESTS
]

[
    build_test(
        name = src + ".test",
        targets = [src.split(".")[0]],
    )
    for src in _CPU_TESTS
]

[
    mojo_test(
        name = src + ".test",
        size = "enormous",
        srcs = [src],
        args = ["-t"],
        enable_assertions = False,
        target_compatible_with = _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "@mojo//:std",
        ],
    )
    for src in _RUN_BENCHMARKS
]

[
    mojo_binary(
        name = src.split(".")[0],
        srcs = [src],
        data = select({
            "//:nvidia_gpu": ["@nvshmem_prebuilt//:host"],
            "//conditions:default": [],
        }),
        enable_assertions = False,
        env = select({
            "//:nvidia_gpu": {"MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt"},
            "//conditions:default": {},
        }),
        target_compatible_with = ["//:has_gpu"] + _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "//max:shmem",
            "//max:structured_kernels",
            "@mojo//:std",
        ],
    )
    for src in glob(
        ["gpu/**/*.mojo"],
        exclude = [
            "gpu/nn/bench_conv2d.mojo",
            "gpu/layout/bench_tile_io_copy.mojo",
            "gpu/nn/bench_conv3d.mojo",
            # Needs `-D fp32_scores/cadence` (gated FP32-scores path);
            # the generic glob can't pass them. Dedicated target below.
            "gpu/nn/bench_mla_prefill_v2.mojo",
        ],
    )
]

[
    build_test(
        name = src + ".test",
        tags = ["gpu"],
        targets = [src.split(".")[0]],
    )
    for src in glob(
        ["gpu/**/*.mojo"],
        exclude = [
            "gpu/nn/bench_conv2d.mojo",
            "gpu/layout/bench_tile_io_copy.mojo",
            "gpu/nn/bench_conv3d.mojo",
            # Needs `-D fp32_scores/cadence` (gated FP32-scores path);
            # the generic glob can't pass them. Dedicated target below.
            "gpu/nn/bench_mla_prefill_v2.mojo",
        ],
    )
]

# MlaPrefillV2 device-timed TFLOPS bench.
# Delegates numeric steps to the gated MlaPrefillV2Core FP32-scores / reference-cadence
# path, so it MUST compile with `-D fp32_scores=true -D cadence=true`
# (enables the gated path for THIS compile only; no kernel source is modified).
# gfx950 / MFMA 32x32x64 FP8. Excluded from the generic gpu/** glob above.
mojo_binary(
    name = "gpu/nn/bench_mla_prefill_v2",
    srcs = ["gpu/nn/bench_mla_prefill_v2.mojo"],
    copts = [
        "-D",
        "fp32_scores=true",
        "-D",
        "cadence=true",
    ],
    enable_assertions = False,
    target_compatible_with = ["//:mi355_gpu"],
    deps = [
        "//max:comm",
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "//max:shmem",
        "//max:structured_kernels",
        "@mojo//:std",
    ],
)

build_test(
    name = "gpu/nn/bench_mla_prefill_v2.test",
    tags = ["gpu"],
    targets = ["gpu/nn/bench_mla_prefill_v2"],
)

# Runnable GPU benchmark targets (mojo_test wrappers so they execute on the
# remote GPU via `bazel test --config=remote-b200 ...`).
mojo_test(
    name = "gpu/nn/bench_conv3d.mojo.run",
    size = "enormous",
    srcs = ["gpu/nn/bench_conv3d.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = [
        "gpu",
        "manual",
    ],
    # Any GPU — B200 routes through dispatch_qslice_conv3d_sm100 /
    # dispatch_im2col_matmul_conv3d, MI355X routes through
    # dispatch_amd_4wave_conv3d / dispatch_im2col_matmul_conv3d.
    # The bench's `impl` runtime arg picks which dispatcher to time
    # per shape.
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "@mojo//:std",
    ],
)

mojo_test(
    name = "gpu/nn/bench_conv2d.mojo.run",
    size = "enormous",
    srcs = ["gpu/nn/bench_conv2d.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "@mojo//:std",
    ],
)

mojo_test(
    name = "gpu/layout/bench_tile_io_copy.mojo.run",
    size = "enormous",
    srcs = ["gpu/layout/bench_tile_io_copy.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "1",
    },
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:layout",
        "@mojo//:std",
    ],
)

# --- SM100 FA4 warp-specialized (WS) vs baseline A/B benches ---
# Execute on a remote B200 via `bazel test --config=remote-b200[-benchmark] ...`
# (mojo_test so the run is a remote *test action*; `bazel run` would execute locally).
# Comptime cells (each a separate compiled target): FA4_FORCE_CONFIG (0=auto, 1=WS,
# 2=baseline) x FA4_WS_SPLITK_FORCE (P) x depth. Baseline (run_base, FORCE=2) comptime-kills
# the WS block (dispatch.mojo:558-559) -> byte-identical to main's selected non-WS path.
# Runtime shape (seq_len/num_keys/cache_len/batch_size) is forwarded per invocation via
# `--test_arg=--name=value` (arg_parse matches "--<name>=", internal_utils/_utils.mojo:205);
# always add `--nocache_test_results` for a benchmark. See plan crystalline-leaping-sunrise.md.
_FA4_WS_CELLS = {
    "run_auto": [
        "-D",
        "FA4_FORCE_CONFIG=0",
    ],
    "run_ws": [
        "-D",
        "FA4_FORCE_CONFIG=1",
    ],
    "run_ws_p2": [
        "-D",
        "FA4_FORCE_CONFIG=1",
        "-D",
        "FA4_WS_SPLITK_FORCE=2",
    ],
    "run_ws_p4": [
        "-D",
        "FA4_FORCE_CONFIG=1",
        "-D",
        "FA4_WS_SPLITK_FORCE=4",
    ],
    "run_base": [
        "-D",
        "FA4_FORCE_CONFIG=2",
    ],
}

# Deps/data/env mirror the generic gpu/** glob (above) that already compiles these srcs.
_FA4_WS_DEPS = [
    "//max:comm",
    "//max:internal_utils",
    "//max:layout",
    "//max:nn",
    "//max:shmem",
    "//max:structured_kernels",
    "@mojo//:std",
]

# bench_mha (contiguous): depth is comptime via `-D depth=<d>`.
[
    mojo_test(
        name = "gpu/nn/bench_mha.mojo.%s_d%d" % (suffix, depth),
        size = "enormous",
        srcs = ["gpu/nn/bench_mha.mojo"],
        copts = copts + [
            "-D",
            "depth=%d" % depth,
        ],
        data = select({
            "//:nvidia_gpu": ["@nvshmem_prebuilt//:host"],
            "//conditions:default": [],
        }),
        enable_assertions = False,
        env = select({
            "//:nvidia_gpu": {"MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt"},
            "//conditions:default": {},
        }),
        exec_properties = {
            "test.resources:gpu-memory": "64",
        },
        tags = [
            "gpu",
            "manual",
        ],
        target_compatible_with = ["//:b200_gpu"],
        deps = _FA4_WS_DEPS,
    )
    for suffix, copts in _FA4_WS_CELLS.items()
    for depth in [
        64,
        128,
    ]
]

# bench_kv_cache_ragged_flash_attention (ragged, long-cache/small-grid vehicle):
# depth is comptime via `-D head_dim=<d>`.
[
    mojo_test(
        name = "gpu/nn/bench_kv_cache_ragged_flash_attention.mojo.%s_d%d" % (suffix, depth),
        size = "enormous",
        srcs = ["gpu/nn/bench_kv_cache_ragged_flash_attention.mojo"],
        copts = copts + [
            "-D",
            "head_dim=%d" % depth,
        ],
        data = select({
            "//:nvidia_gpu": ["@nvshmem_prebuilt//:host"],
            "//conditions:default": [],
        }),
        enable_assertions = False,
        env = select({
            "//:nvidia_gpu": {"MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt"},
            "//conditions:default": {},
        }),
        exec_properties = {
            "test.resources:gpu-memory": "40",
        },
        tags = [
            "gpu",
            "manual",
        ],
        target_compatible_with = ["//:b200_gpu"],
        deps = _FA4_WS_DEPS,
    )
    for suffix, copts in _FA4_WS_CELLS.items()
    for depth in [
        64,
        128,
    ]
]

pkg_files(
    name = "kernel_benchmark_input_files",
    srcs = glob(
        [
            "**/*.mojo",
            "**/*.yaml",
        ],
        exclude = [
            "demos/**",
            "misc/**",
            "packages/**",
        ],
    ),
    prefix = "kernel-benchmark",
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_filegroup(
    name = "kernel_benchmark_files",
    srcs = [
        ":kernel_benchmark_input_files",
        "//max/kernels/benchmarks/autotune:autotune_files",
    ],
)
