load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "max_tests",
    srcs = glob(
        ["*.py"],
        exclude = [
            "compile_pool_parent_exit_subprocess.py",
            "mojo_runtime_background_thread_subprocess_asyncio.py",
            "mojo_runtime_background_thread_subprocess_thread.py",
            "mojo_runtime_foreign_thread_subprocess.py",
            "test_compile_pool.py",
            "test_executor.py",
            "test_flashinfer_cubin.py",
            "test_interpreter.py",
            "test_interpreter_ops.py",
            "test_interpreter_ops_gpu.py",
            "test_mojo_runtime_background_thread_import.py",
            "test_mojo_runtime_foreign_thread.py",
        ],
    ),
    ignore_extra_deps = [
        # Unsure why, test_tensor slows down if this doesn't exist.
        "//max/python/max/_interpreter_ops",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max:_mlir_context",
        "//max/python/max:tensor",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/experimental/nn",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        "//max/python/max/pipelines/context",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_compile_pool",
    srcs = [
        "compile_pool_parent_exit_subprocess.py",
        "test_compile_pool.py",
    ],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/experimental",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_mojo_runtime_background_thread_import",
    srcs = [
        "mojo_runtime_background_thread_subprocess_asyncio.py",
        "mojo_runtime_background_thread_subprocess_thread.py",
        "test_mojo_runtime_background_thread_import.py",
    ],
    ignore_extra_deps = [
        "//max/python/max:_core",
        requirement("numpy"),
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//:asan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/engine",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_mojo_runtime_foreign_thread",
    srcs = [
        "mojo_runtime_foreign_thread_subprocess.py",
        "test_mojo_runtime_foreign_thread.py",
    ],
    ignore_extra_deps = [
        "//max/python/max:_core",
        requirement("numpy"),
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max/driver",
        "//max/python/max/engine",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_flashinfer_cubin",
    srcs = ["test_flashinfer_cubin.py"],
    tags = ["gpu"],
    target_compatible_with = ["//:nvidia_gpu"],
    deps = [
        requirement("flashinfer-cubin"),
    ],
)

modular_py_test(
    name = "test_interpreter",
    srcs = ["test_interpreter.py"],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max:interpreter",
        "//max/python/max:tensor",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_interpreter_ops",
    timeout = "long",
    # conftest.py carries the collection-time hook that points
    # MODULAR_DERIVED_PATH at the warm dir before the import-time precompile
    # runs. This standalone target is excluded from the max_tests glob, so it
    # must list conftest.py (and the deps conftest.py imports) explicitly.
    srcs = [
        "conftest.py",
        "test_interpreter_ops.py",
    ],
    # Depend on the build-time-warmed eager-GC cache so the import-time precompile
    # force-loads it instead of cold-compiling the sweep on the executor. GPU
    # lanes take the combined CPU+accelerator warm; CPU-only lanes take the CPU
    # warm. No a100 branch: a100 has no CI lane. The XARCH_WARM_RLOCATION env
    # select below must match this dep.
    data = select({
        "//:b200_gpu": ["//max/tests/integration/xarch_warm:compose"],
        "//:h100_gpu": ["//max/tests/integration/xarch_warm:compose"],
        "//:mi355_gpu": ["//max/tests/integration/xarch_warm:compose"],
        "//conditions:default": ["//max/tests/integration/xarch_warm:warm_cpu"],
    }),
    env = {
        # Batch-compile the GC matrix once at import rather than lazily per
        # dispatch, so the full dtype sweep doesn't time out.
        "MAX_EAGER_OP_PRECOMPILE": "1",
        # Opt in to asserted-toolchain force-load adoption of the warm above.
        "MODULAR_EAGER_WARM_ADOPT_ASSERTED": "1",
    } | select({
        "//:b200_gpu": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:compose)"},
        "//:h100_gpu": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:compose)"},
        "//:mi355_gpu": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:compose)"},
        "//conditions:default": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:warm_cpu)"},
    }),
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max:_mlir_context",
        "//max/python/max:tensor",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_interpreter_ops_gpu",
    timeout = "long",
    # conftest.py carries the collection-time hook that points
    # MODULAR_DERIVED_PATH at the warm dir before the import-time precompile
    # runs. This standalone target is excluded from the max_tests glob, so it
    # must list conftest.py (and the deps conftest.py imports) explicitly.
    srcs = [
        "conftest.py",
        "test_interpreter_ops_gpu.py",
    ],
    # Force-load the build-warmed eager-GC cache (per GPU SKU) at import-time
    # precompile. The default is required, not a fallback: the pydeps lint
    # aspect evaluates this select on every lane, ungated by //:nvidia_gpu, so a
    # no-default select fails its analysis. No a100 branch (no a100 CI lane); an
    # unwarmed NVIDIA lane (e.g. reintroduced a100) fails loudly at runtime via
    # _require_warm_adoption, not silently.
    data = select({
        "//:b200_gpu": ["//max/tests/integration/xarch_warm:compose"],
        "//:h100_gpu": ["//max/tests/integration/xarch_warm:compose"],
        "//conditions:default": [],
    }),
    env = {
        "MODULAR_TORCH_MEMORY_PERCENT": "0.6",
        # Batch-compile the GC matrix once at import rather than lazily per
        # dispatch, so the full dtype sweep doesn't time out.
        "MAX_EAGER_OP_PRECOMPILE": "1",
        # Opt in to asserted-toolchain force-load adoption of the warm above.
        "MODULAR_EAGER_WARM_ADOPT_ASSERTED": "1",
    } | select({
        "//:b200_gpu": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:compose)"},
        "//:h100_gpu": {"XARCH_WARM_RLOCATION": "$(rlocationpath //max/tests/integration/xarch_warm:compose)"},
        "//conditions:default": {},
    }),
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    ignore_extra_deps = [
        # lazy import
        "//max/python/max/_interpreter_ops",
    ],
    tags = ["gpu"],
    target_compatible_with = ["//:nvidia_gpu"],
    deps = [
        "//max/python/max:_core",
        "//max/python/max:_mlir_context",
        "//max/python/max:interpreter",
        "//max/python/max:tensor",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        requirement("numpy"),
        requirement("torch"),
    ],
)

modular_py_test(
    name = "test_executor",
    srcs = ["test_executor.py"],
    ignore_extra_deps = [
        # lazy import
        "//max/python/max/_interpreter_ops",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max:interpreter",
        "//max/python/max/_interpreter_ops",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/experimental",
        "//max/python/max/graph",
    ],
)

# Keep this suite fast and broadly runnable. New CPU-safe tests with no special
# local prerequisites should prefer to join this target.
test_suite(
    name = "cpu_local_tests",
    tests = [
        ":max_tests",
        ":test_compile_pool",
        ":test_interpreter",
        ":test_interpreter_ops",
        ":test_mojo_runtime_background_thread_import",
        ":test_mojo_runtime_foreign_thread",
        "//max/tests/tests/_core_mojo:tests",
        "//max/tests/tests/benchmark:tests",
        "//max/tests/tests/driver:tests",
        "//max/tests/tests/graph:multi_version_tests",
        "//max/tests/tests/graph:tests",
        "//max/tests/tests/mojo-importer",
        "//max/tests/tests/nn:cpu_tests",
        "//max/tests/tests/profiler:tests",
        "//max/tests/tests/serve:parser_tests",
        "//max/tests/tests/support:tests",
    ],
)
